feat: implements Recipient Deletion user case
